# turing-machines

./: .gitignore  CMakeLists.txt  README.md  draft.cpp
include/: definitions.h  one_tape_turing_machine.h  routines.h  tape.h  three_tape_turing_machine.h  turing_machine.h
src/: main.cpp  one_tape_turing_machine.cpp  routines.cpp  tape.cpp  three_tape_turing_machine.cpp
